@@ -1,0 +1,11 @@
+<html>
+  <head><title>Page Title</title></head>
+  <body>
+    <a href="/frame_test.html">This link is not called "A Link"</a>
+    <form method="get" action="/frame_test.html">
+      <input type="text" name="words" value="nil">
+      <input type="submit" value="A Button">
+    </form>
+    <a href="/index.html">A Link</a>
+  </body>
+</html>
